; ModuleID = '/home/carl/AnghaBench/lab/engine/code/cgame/extr_cg_draw.c_CG_DrawScriptFilledRectangles.c'
source_filename = "/home/carl/AnghaBench/lab/engine/code/cgame/extr_cg_draw.c_CG_DrawScriptFilledRectangles.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@SCREEN_WIDTH = common dso_local global i32 0, align 4
@SCREEN_HEIGHT = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void ()* @CG_DrawScriptFilledRectangles to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @CG_DrawScriptFilledRectangles() #0 {
  %1 = alloca i32, align 4
  %2 = alloca i32, align 4
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  %8 = load i32, i32* @SCREEN_WIDTH, align 4
  %9 = load i32, i32* @SCREEN_HEIGHT, align 4
  %10 = call i32 @dmlab_make_filled_rectangles(i32 %8, i32 %9)
  store i32 %10, i32* %7, align 4
  store i32 0, i32* %1, align 4
  br label %11

11:                                               ; preds = %25, %0
  %12 = load i32, i32* %1, align 4
  %13 = load i32, i32* %7, align 4
  %14 = icmp slt i32 %12, %13
  br i1 %14, label %15, label %28

15:                                               ; preds = %11
  %16 = load i32, i32* %1, align 4
  %17 = load i32, i32* %6, align 4
  %18 = call i32 @dmlab_get_filled_rectangle(i32 %16, i32* %2, i32* %3, i32* %4, i32* %5, i32 %17)
  %19 = load i32, i32* %2, align 4
  %20 = load i32, i32* %3, align 4
  %21 = load i32, i32* %4, align 4
  %22 = load i32, i32* %5, align 4
  %23 = load i32, i32* %6, align 4
  %24 = call i32 @CG_FillRect(i32 %19, i32 %20, i32 %21, i32 %22, i32 %23)
  br label %25

25:                                               ; preds = %15
  %26 = load i32, i32* %1, align 4
  %27 = add nsw i32 %26, 1
  store i32 %27, i32* %1, align 4
  br label %11

28:                                               ; preds = %11
  ret void
}

declare dso_local i32 @dmlab_make_filled_rectangles(i32, i32) #1

declare dso_local i32 @dmlab_get_filled_rectangle(i32, i32*, i32*, i32*, i32*, i32) #1

declare dso_local i32 @CG_FillRect(i32, i32, i32, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
